freebsd-utils (9.1-3) UNRELEASED; urgency=low

  [ Guillem Jover ] 
  * Switch to canonical Vcs URLs.

  [ Petr Salinger ]
  * add #include <netinet/ether.h> into lib/linkaddr.h. 
  
 -- Guillem Jover <guillem@debian.org>  Mon, 29 Jul 2013 14:16:34 +0200

freebsd-utils (9.1-2) unstable; urgency=low

  * Reupload.

 -- Robert Millan <rmh@debian.org>  Mon, 22 Jul 2013 20:13:33 +0200

freebsd-utils (9.1-1) experimental; urgency=low

  * New upstream release.
  * Remove transitional dependency (freebsd-net-tools -> pf)
  * Misc improvements in PPP port. Among others, it should no longer be
    necessary to load modules manually.
  * Split mount -n option into its own patch, since it's now in upstream
    HEAD.

 -- Robert Millan <rmh@debian.org>  Tue, 16 Jul 2013 12:35:06 +0200

freebsd-utils (9.0+ds1-11) unstable; urgency=low

  * Don't use --pidfile when starting/stopping daemons that don't create one:
    - Prevents trying to start nfsd, rpc.lockd, rpc.statd more than once
      (Closes: #700245)
    - Fixes a 30-second delay as each service is stopped (Closes: #700249)
  * Stop nfsd with the correct signal USR1, since it ignores TERM

 -- Steven Chamberlain <steven@pyro.eu.org>  Wed, 27 Mar 2013 13:16:03 +0000

freebsd-utils (9.0+ds1-10) unstable; urgency=low

  * Import patch by Steven Chamberlain to make rpc.lockd start without
    `-h' arguments (Closes: #664812)
  * Add me to uploaders

 -- Christoph Egger <christoph@debian.org>  Mon, 18 Mar 2013 11:54:48 +0100

freebsd-utils (9.0+ds1-9) unstable; urgency=low

  [ Steven Chamberlain ]
  * Fix geli initscript to support more than one geli_device as intended.
    (Closes: #694374)
  * If devfs is unavailable (for example in a jail environment) the
    freebsd-utils start action would exit with non-zero status, causing postinst
    to fail.  Instead, return zero exit status but print a warning.
    (Closes: #695679)

  [ Christoph Egger ]
  * Import patch from Steven Chamberlain to fix segfault getting bridge