@@ -6,7 +6,14 @@ freebsd-utils (9.1-3) UNRELEASED; urgency=low
   [ Petr Salinger ]
   * add #include <netinet/ether.h> into lib/linkaddr.h. 
   
- -- Guillem Jover <guillem@debian.org>  Mon, 29 Jul 2013 14:16:34 +0200
+  [ Robert Millan ]
+  * Re-enable -Werror=implicit-function-declaration.
+    - Require kfreebsd-kernel-headers 9.1-3 (for kldunloadf).
+    - Require freebsd-glue >= 0.0.10 (for ether_ntoa).
+    - Remove -I. from CFLAGS to mimic upstream behaviour (prevents
+      <netgraph.h> from being overriden by local version).
+
+ -- Robert Millan <rmh@debian.org>  Thu, 01 Aug 2013 21:40:06 +0200
 
 freebsd-utils (9.1-2) unstable; urgency=low
 
